tests/negative/parser/postfix_rsquare.orng
// postfix_rsquare.orng:10:9: error: expected closing `]` to match opening `[` here, got `)`
//     x[3)
//        ^
// postfix_rsquare.orng:10:7: note: opening `[` here:
//     x[3)
//      ^
// 
fn main() -> Int {
    let x: [3]Int = (0, 0, 0)
    x[3)
}